exports[`BadCopy`] = `
<div>
  <button
    className="copy__button"
    data-clipboard-target="#copy__button__target_unique-id">
    Copy !
  </button>
  <div
    className="copy-tag"
    id="copy__button__target_unique-id">
    #foo #baz #bar
  </div>
  <noscript />
</div>
`;

exports[`Copy`] = `
<div>
  <span>
    <button
      className="__copy__button__"
      data-clipboard-target="#copy__button__target_unique-id">
      Copy !
    </button>
    <div
      className="copyString_k502ai"
      id="copy__button__target_unique-id">
      #foo #baz #bar
    </div>
  </span>
  <noscript />
</div>
`;

exports[`YarisugiCopy`] = `
<div>
  <span>
    <button
      className="__copy__button__"
      data-clipboard-target="#copy__button__target_unique-id">
      Copy !
    </button>
    <div
      className="copyString_k502ai"
      id="copy__button__target_unique-id">
      #foo #baz #bar
    </div>
  </span>
  <noscript />
</div>
`;
